errata typo correction (1)

--- a/71987-h/71987-h.htm
+++ b/71987-h/71987-h.htm
@@ -6845,7 +6845,7 @@ had been much mixture of blood in his family for some
 generations, perhaps through odalisque channels; for
 the children of odalisques and of regular wives are
 treated as equals. An European might have made a
-companion, or friend, of this man a footing upon which
+companion, or friend, of this man, a footing upon which
 he never could place himself with a negro.</p>
 
 <p>I have given the above account of our visitor for
